calico_versioned_docs/version-3.30/reference/resources/kubecontrollersconfig.mdx
---
description: API for KubeControllersConfiguration resource.
---

import Selectors from '@site/calico_versioned_docs/version-3.30/_includes/content/_selectors.mdx';

# Kubernetes controllers configuration

A $[prodname] [Kubernetes controllers](../kube-controllers/configuration.mdx) configuration resource (`KubeControllersConfiguration`) represents configuration options for the $[prodname] Kubernetes controllers.

## Sample YAML

```yaml
apiVersion: projectcalico.org/v3
kind: KubeControllersConfiguration
metadata:
  name: default
spec:
  logSeverityScreen: Info
  healthChecks: Enabled
  etcdV3CompactionPeriod: 10m
  prometheusMetricsPort: 9094
  controllers:
    node:
      reconcilerPeriod: 5m
      leakGracePeriod: 15m
      syncLabels: Enabled
      hostEndpoint:
        autoCreate: Disabled
        createDefaultHostEndpoint: Enabled
        templates:
          - generateName: custom-host-endpoint
            interfaceCIDRs:
              - 1.2.3.0/24
            nodeSelector: "has(my-label)"
            labels:
              key: value
    policy:
      reconcilerPeriod: 5m
    workloadEndpoint:
      reconcilerPeriod: 5m
    serviceAccount:
      reconcilerPeriod: 5m
    namespace:
      reconcilerPeriod: 5m
    loadbalancer:
      assignIPs: AllServices
```

## Kubernetes controllers configuration definition

### Metadata

| Field | Description                                               | Accepted Values   | Schema |
| ----- | --------------------------------------------------------- | ----------------- | ------ |
| name  | Unique name to describe this resource instance. Required. | Must be `default` | string |

- $[prodname] automatically creates a resource named `default` containing the configuration settings, only the name `default` is used and only one object of this type is allowed. You can use [calicoctl](../calicoctl/overview.mdx) to view and edit these settings

### Spec

| Field                  | Description                                                                                                | Accepted Values                     | Schema                            | Default |
| ---------------------- | ---------------------------------------------------------------------------------------------------------- | ----------------------------------- | --------------------------------- | ------- |
| logSeverityScreen      | The log severity above which logs are sent to the stdout.                                                  | Debug, Info, Warning, Error, Fatal  | string                            | Info    |
| healthChecks           | Enable support for health checks                                                                           | Enabled, Disabled                   | string                            | Enabled |
| prometheusMetricsPort  | Port on which to serve prometheus metrics.                                                                 | Set to 0 to disable, > 0 to enable. | TCP port                          | 9094    |
| etcdV3CompactionPeriod | The period between etcdv3 compaction requests. Only applies when using etcd as the $[prodname] datastore. | Set to 0 to disable, > 0 to enable  | [Duration string][parse-duration] | 10m     |
| controllers            | Enabled controllers and their settings                                                                     |                                     | [Controllers](#controllers)       |         |

### Controllers

| Field            | Description                                           | Schema                                                                        |
| ---------------- | ----------------------------------------------------- | ----------------------------------------------------------------------------- |
| node             | Enable and configure the node controller              | omit to disable, or [NodeController](#nodecontroller)                         |
| policy           | Enable and configure the network policy controller    | omit to disable, or [PolicyController](#policycontroller)                     |
| workloadEndpoint | Enable and configure the workload endpoint controller | omit to disable, or [WorkloadEndpointController](#workloadendpointcontroller) |
| serviceAccount   | Enable and configure the service account controller   | omit to disable, or [ServiceAccountController](#serviceaccountcontroller)     |
| namespace        | Enable and configure the namespace controller         | omit to disable, or [NamespaceController](#namespacecontroller)               |

### NodeController

The node controller automatically cleans up configuration for nodes that no longer exist. Optionally, it can create host endpoints for all Kubernetes nodes.

| Field            | Description                                                                       | Accepted Values   | Schema                            | Default |
| ---------------- | --------------------------------------------------------------------------------- | ----------------- | --------------------------------- | ------- |
| reconcilerPeriod | Period to perform reconciliation with the $[prodname] datastore                   |                   | [Duration string][parse-duration] | 5m      |
| syncLabels       | When enabled, Kubernetes node labels will be copied to $[prodname] node objects.  | Enabled, Disabled | string                            | Enabled |
| hostEndpoint     | Configures the host endpoint controller                                           |                   | [HostEndpoint](#hostendpoint)     |         |
| leakGracePeriod  | Grace period to use when garbage collecting suspected leaked IP addresses.        |                   | [Duration string][parse-duration] | 15m     |

### HostEndpoint

| Field                     | Description                                                      | Accepted Values   | Schema                | Default  |
| ------------------------- | ---------------------------------------------------------------- | ----------------- | --------------------- | -------- |
| autoCreate                | When enabled, automatically create host endpoints                | Enabled, Disabled | string                | Disabled |
| createDefaultHostEndpoint | When enabled, default host endpoint will be created              | Enabled, Disabled | string                | Enabled  |
| templates                 | Controls creation of custom host endpoints                       |                   | [Template](#template) |          |

### Template

| Field                     | Description                                                                                                                         | Accepted Values     | Schema                              | Default  |
| ------------------------- | ----------------------------------------------------------------------------------------------------------------------------------- | ------------------- | ----------------------------------- | -------- |
| generateName              | Unique name used as suffix for host endpoints created based on this template                                                        | Alphanumeric string | string                              |          |
| nodeSelector              | Selects the nodes for which this template should create host endpoints                                                              |                     | [Selector](#selectors)              | all()    |
| interfaceCIDRs            | This configuration defines which IP addresses from a node's specification (including standard, tunnel, and WireGuard IPs) are eligible for inclusion in the generated HostEndpoint. IP addresses must fall within the provided CIDR ranges to be considered. If no address on the node matches the specified CIDRs, the HostEndpoint creation is skipped. | List of valid CIDRs | List string                         |          |
| labels                    | Labels to be added to generated host endpoints matching this template                                                               |                     | map of string key to string values  |          |

### Selectors

<Selectors />

### PolicyController

The policy controller syncs Kubernetes network policies to the Calico datastore. This controller is only valid when using etcd as the $[prodname] datastore.

| Field            | Description                                                      | Schema                            | Default |
| ---------------- | ---------------------------------------------------------------- | --------------------------------- | ------- |
| reconcilerPeriod | Period to perform reconciliation with the $[prodname] datastore | [Duration string][parse-duration] | 5m      |

### WorkloadEndpointController

The workload endpoint controller automatically syncs Kubernetes pod label changes to the $[prodname] datastore by updating the corresponding workload
endpoints appropriately. This controller is only valid when using etcd as the $[prodname] datastore.

| Field            | Description                                                      | Schema                            | Default |
| ---------------- | ---------------------------------------------------------------- | --------------------------------- | ------- |
| reconcilerPeriod | Period to perform reconciliation with the $[prodname] datastore | [Duration string][parse-duration] | 5m      |

### ServiceAccountController

The service account controller syncs Kubernetes service account changes to the $[prodname] datastore. This controller is only valid when using etcd as
the $[prodname] datastore.

| Field            | Description                                                      | Schema                            | Default |
| ---------------- | ---------------------------------------------------------------- | --------------------------------- | ------- |
| reconcilerPeriod | Period to perform reconciliation with the $[prodname] datastore | [Duration string][parse-duration] | 5m      |

### NamespaceController

The namespace controller syncs Kubernetes namespace label changes to the $[prodname] datastore. This controller is only valid when using etcd as the
$[prodname] datastore.

| Field            | Description                                                      | Schema                            | Default |
| ---------------- | ---------------------------------------------------------------- | --------------------------------- | ------- |
| reconcilerPeriod | Period to perform reconciliation with the $[prodname] datastore | [Duration string][parse-duration] | 5m      |

### LoadBalancerController

The load balancer controller manages IPAM for Services of type LoadBalancer.

| Field            | Description                                                      | Accepted Values                          | Schema | Default     |
| ---------------- | ---------------------------------------------------------------- | ---------------------------------------- | ------ | ----------- |
| assignIPs        | Mode in which LoadBalancer controller operates                   | AllServices, RequestedServicesOnly       | String | AllServices |

[parse-duration]: https://golang.org/pkg/time/#ParseDuration
